feat: harden PGN tokenization and canonical output